--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "config": "^1.15.0",
+    "lodash": "^3.10.1"
+  }
 }
