--- a/package.json
+++ b/package.json
@@ -13,7 +13,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer-core": "^6.0.1",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
+    "co": "^4.6.0",
     "config": "^1.15.0",
-    "lodash": "^3.10.1"
+    "css-loader": "^0.19.0",
+    "eslint": "^1.7.0",
+    "eslint-loader": "^1.1.0",
+    "eslint-plugin-react": "^3.5.1",
+    "file-loader": "^0.8.4",
+    "gulp-load-plugins": "^1.0.0",
+    "gulp-util": "^3.0.6",
+    "lodash": "^3.10.1",
+    "minimist": "^1.2.0",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
+    "node-sass": "^3.3.3",
+    "postcss": "^5.0.10",
+    "postcss-loader": "^0.6.0",
+    "run-sequence": "^1.1.4",
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2"
   }
 }
