--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "run-sequence": "^1.1.4",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.12.4",
+    "thunkify": "^2.1.2",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "yargs": "^3.27.0"
   },
   "devDependencies": {
     "grunt-dust-html": "^0.2.1",
